compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__access_int.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let x = 1 x.whatever
---
----- SOURCE CODE
let x = 1 x.whatever

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.rakun:1:12
  │
1 │ let x = 1 x.whatever
  │            ^^^^^^^^^ This field does not exist

The value being accessed has this type:

    Int

It does not have any fields.
