compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__accessor_multiple_variants_multiple_positions.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 639
expression: "\npub record Person {\n    Teacher(name: String, title: String, age: Int)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
----- SOURCE CODE

pub record Person {
    Teacher(name: String, title: String, age: Int)
    Student(name: String, age: Int)
}
pub fn get_name(person: Person) { person.name }
pub fn get_age(person: Person) { person.age }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.rakun:7:40
  │
7 │ pub fn get_age(person: Person) { person.age }
  │                                        ^^^^ Did you mean `name`?

The value being accessed has this type:

    Person

It has these accessible fields:

    .name

Note: The field you are trying to access might not be consistently present
or positioned across the custom type's variants, preventing reliable
access. Ensure the field exists in the same position and has the same
type in all variants, or pattern matching on it to enable direct accessor
syntax.
