compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__ambiguous_import_error_with_unqualified.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        import wibble/sub\n        import wibble2/sub.{wobble}\n        pub fn main() {\n            sub.wobble()\n        }\n        "
---
----- SOURCE CODE
-- wibble/sub.rakun
pub fn wobble() { 1 }

-- wibble2/sub.rakun
pub fn wobble() { 1 }

-- main.rakun

        import wibble/sub
        import wibble2/sub.{wobble}
        pub fn main() {
            sub.wobble()
        }
        

----- ERROR
error: Duplicate import
  ┌─ /src/one/two.rakun:2:9
  │
2 │         import wibble/sub
  │         ^^^^^^^^^^^^^^^^^ First imported here
3 │         import wibble2/sub.{wobble}
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Reimported here

`sub` has been imported multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
