compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__ambiguous_type_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "import wibble pub record Thing { Thing }\n        pub fn main() {\n            [Thing] == [wibble.Thing]\n        }"
---
----- SOURCE CODE
-- wibble.rakun
pub record Thing { Thing }

-- main.rakun
import wibble pub record Thing { Thing }
        pub fn main() {
            [Thing] == [wibble.Thing]
        }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:3:24
  │
3 │             [Thing] == [wibble.Thing]
  │                        ^^^^^^^^^^^^^^

Expected type:

    List(Thing)

Found type:

    List(wibble.Thing)
