compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 35
expression: "case <<1>> { <<2.0, a>> -> 1 _ -> 2 }"
---
----- SOURCE CODE
case <<1>> { <<2.0, a>> -> 1 _ -> 2 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:16
  │
1 │ case <<1>> { <<2.0, a>> -> 1 _ -> 2 }
  │                ^^^

Expected type:

    Int

Found type:

    Float
