compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_conflicting_endianness1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = <<1:big-little>> x"
---
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:17
  │
1 │ let x = <<1:big-little>> x
  │                 ^^^^^^ This is an extra endianness specifier

Hint: This segment already has an endianness of big.
See: https://tour.rakun.run/data-types/bit-arrays/
